[workspace]
resolver = "2"
members = ["cli", "consumer", "histoflux", "image-guard", "models", "shared-utils", "substreams-sink"]

[workspace.dependencies]
alloy = { version = "0.6.4", features = ["full"] }
async-trait = "0.1.83"
aws-config = { version = "1.0.1", features = ["behavior-version-latest"] }
aws-sdk-sqs = { version = "1.3.0" }
aws-smithy-runtime-api = "1.7.0"
chrono = { version = "0.4.35", features = ["serde"] }
dotenvy = "0.15.7"
envy = "0.4.2"
env_logger = "0.11.5"
hex = { version = "0.4.3", features = ["serde"] }
log = "0.4.20"
macon = "1.2.0"
rand = "0.8.5"
reqwest = { version = "0.12.8", features = ["multipart", "json"] }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
sqlx = { version = "0.7.2", features = [
    "postgres",
    "runtime-tokio",
    "uuid",
    "chrono",
    "bigdecimal",
    "rust_decimal",
] }
strum = "0.26.3"
strum_macros = "0.26.4"
thiserror = "2.0.3"
tokio = { version = "1.20.1", features = ["full"] }
utoipa = { version = "5.2.0", features = ["macros", "axum_extras", "chrono"] }
