[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy.workspace = true
graphql_client = { version = "0.14", features = ["reqwest"] }
reqwest = { version = "0.12.8", features = ["json", "blocking"] }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
ratatui = "0.29"
crossterm = "0.28.1"
lazy_static = "1.4.0"
