[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy.workspace = true
chrono = "0.4"
crossterm = "0.28.1"
graphql_client = { version = "0.14", features = ["reqwest"] }
lazy_static = "1.4.0"
ratatui = "0.29"
reqwest = { version = "0.12.8", features = ["json", "blocking"] }
serde.workspace = true
tokio.workspace = true
