[package]
name = "consumer"
version = "0.11.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
hex = "0.4.3"
rustc-hex = "2.1.0"
sqlx-core = "0.8.0"

# Local dependencies
models = { path = "../models" }
shared-utils = { path = "../shared-utils" }

# Workspace dependencies
alloy.workspace = true
async-trait.workspace = true
aws-config.workspace = true
aws-sdk-sqs.workspace = true
aws-smithy-runtime-api.workspace = true
dotenvy.workspace = true
env_logger.workspace = true
envy.workspace = true
futures = "0.3.31"
hyper = "1.5.1"
once_cell = "1.20.2"
prometheus = "0.13.4"
regex = "1.11.1"
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
strum.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
warp = "0.3.7"