[package]
name = "graphdb"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy.workspace = true
env_logger.workspace = true
envy.workspace = true
indradb-lib.workspace = true
md5 = "0.7"
models = { path = "../models" }
serde.workspace = true
serde_json.workspace = true
shared-utils = { path = "../shared-utils" }
sqlx.workspace = true
tera = "1.19"
thiserror.workspace = true
tokio.workspace = true
uuid = { version = "1.15.1", features = ["v5"] }
warp = "0.3"