[package]
name = "histocrawler"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy.workspace = true
dotenvy.workspace = true
env_logger.workspace = true
envy.workspace = true
log.workspace = true
models = { path = "../models" }
serde.workspace = true
serde_json.workspace = true
shared-utils = { path = "../shared-utils" }
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
url.workspace = true