[package]
name = "histoflux"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
zip = "2.2.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.34.0", features = ["full"] }
aws-config.workspace = true
aws-sdk-sqs.workspace = true
aws-smithy-runtime-api.workspace = true
log.workspace = true
thiserror.workspace = true
env_logger.workspace = true
dotenvy.workspace = true

