[package]
name = "histoflux"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config.workspace = true
aws-sdk-sqs.workspace = true
aws-smithy-runtime-api.workspace = true
dotenvy.workspace = true
env_logger.workspace = true
log.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx.workspace = true
thiserror.workspace = true
tokio = { version = "1.34.0", features = ["full"] }
envy.workspace = true
shared-utils = { path = "../shared-utils" }
models = { path = "../models" }