[package]
name = "histoflux"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config.workspace = true
aws-sdk-sqs.workspace = true
aws-smithy-runtime-api.workspace = true
chrono.workspace = true
dotenvy.workspace = true
env_logger.workspace = true
envy.workspace = true
log.workspace = true
models = { path = "../models" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shared-utils = { path = "../shared-utils" }
sqlx.workspace = true
thiserror.workspace = true
tokio = { version = "1.34.0", features = ["full"] }