[package]
name = "image-guard"
version = "2.0.2"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["multipart", "tokio"] }
axum-macros = "0.5.0"
axum-prometheus = "0.8.0"
chrono.workspace = true
dotenvy.workspace = true
env_logger.workspace = true
envy.workspace = true
http = "1.1.0"
log.workspace = true
models = { path = "../models" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
shared-utils = { path = "../shared-utils" }
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower-http = { version = "0.6.2", features = ["cors"] }
utoipa = { version = "5.3.1" }
utoipa-swagger-ui = { version = "8.0.3", features = ["axum"] }
