[package]
name = "models"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy.workspace = true
async-trait.workspace = true
chrono.workspace = true
macon.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
strum.workspace = true
strum_macros.workspace = true
thiserror.workspace = true
tokio.workspace = true
utoipa.workspace = true

[package.metadata.cargo-machete]
ignored = ["strum"]