[package]
name = "models"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy.workspace = true
async-trait.workspace = true
bytes = "1.9.0"
chrono.workspace = true
hex.workspace = true
hypersync-client.workspace = true
macon.workspace = true
rand.workspace = true
indradb-lib.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
strum.workspace = true
strum_macros.workspace = true
thiserror.workspace = true
tokio.workspace = true
utoipa.workspace = true

[package.metadata.cargo-machete]
ignored = ["strum"]
