[package]
name = "shared-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.8.0"
log.workspace = true
macon.workspace = true
models = { path = "../models" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
utoipa.workspace = true

