[package]
name = "substreams-sink-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-stream = "0.3"
futures03 = { version = "0.3.31", package = "futures", features = ["compat"] }
tokio.workspace = true
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-retry = "0.3"
tonic = { version = "0.12", features = ["gzip", "tls-roots"] }
prost = "0.13"
prost-types = "0.13"
thiserror = "2.0.3"
chrono = "0.4.38"
serde.workspace = true
macon = "1.2.0"
hex.workspace = true
serde_json.workspace = true
dotenvy = "0.15.7"
sqlx.workspace = true
env_logger.workspace = true
envy.workspace = true
shared-utils = { path = "../shared-utils" }
clap = "4.1.10"
reqwest.workspace = true
aws-config.workspace = true
aws-sdk-sqs.workspace = true
aws-smithy-runtime-api.workspace = true
models = { path = "../models" }
log.workspace = true

[features]
local = []
default = []
