[package]
name = "substreams-sink"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-stream = "0.3"
aws-config.workspace = true
aws-sdk-sqs.workspace = true
aws-smithy-runtime-api.workspace = true
chrono = "0.4.38"
clap = { version = "4.1.10", features = ["derive"] }
dotenvy = "0.15.7"
env_logger.workspace = true
envy.workspace = true
futures03 = { version = "0.3.31", package = "futures", features = ["compat"] }
hex.workspace = true
log.workspace = true
macon = "1.2.0"
models = { path = "../models" }
prost = "0.13"
prost-types = "0.13"
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
shared-utils = { path = "../shared-utils" }
sqlx.workspace = true
thiserror = "2.0.3"
tokio-retry = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
tokio.workspace = true
tonic = { version = "0.12", features = ["gzip", "tls-roots"] }
